Fix style issue on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -87,7 +87,7 @@ ul {
   .nav {
     width: 50%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 
     @media (max-width: 850px) {
       width: 75%;
